--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myreactfolio",
-  "homepage": "https://sujit995.github.io/myPortfolio/",
+  "homepage": "https://sujit995.github.io/myreactportfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
