changes in json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myreactfolio",
+  "name": "myreactportfolio",
   "homepage": "https://sujit995.github.io/myreactportfolio/",
   "version": "0.1.0",
   "private": true,
